--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -100,7 +100,7 @@
            ? '<i class="fa fa-eye"></i>'
            : '<i class="fa fa-eye-slash"></i>';
      });
-   </script>
+   </script>f
    <script src="{% static 'authentication/js/login.js' %}"></script>
  </body>
 </html>
