--- a/authentication/templates/authentication/signup.html
+++ b/authentication/templates/authentication/signup.html
@@ -26,7 +26,7 @@
 
     <div class="input-group">
         <div class="input-field-container">
-            <input type="text" name="firstname" placeholder="Enter Full Name" required>
+            <input type="text" name="full_name" id="full_name" placeholder="Enter Full Name" required>
             <div class="validation-icon" id="full-name-icon"></div>
         </div>
         <div class="error-message" id="full-name-error"></div>
@@ -44,8 +44,8 @@
         <div class="input-field-container password-field">
             <input type="password" name="password" id="password" placeholder="Enter Password" required>
             <span class="toggle-password" id="togglePassword"><i class="fa fa-eye"></i></span>
-            <div class="validation-icon" id="password-icon"></div>
         </div>
+        <div class="field-separator"></div>
         <div class="error-message" id="password-error"></div>
     </div>
 
@@ -53,8 +53,8 @@
         <div class="input-field-container password-field">
             <input type="password" name="confirm_password" id="confirm_password" placeholder="Confirm Password" required>
             <span class="toggle-password" id="toggleConfirmPassword"><i class="fa fa-eye"></i></span>
-            <div class="validation-icon" id="confirm-password-icon"></div>
         </div>
+        <div class="field-separator"></div>
         <div class="error-message" id="confirm-password-error"></div>
     </div>
 
