--- a/blogapp/templates/blogapp/home.html
+++ b/blogapp/templates/blogapp/home.html
@@ -1,56 +1,55 @@
 {% extends 'blogapp/base.html' %}
 
 {% block content %}
-<h1 class="mb-4">All Blogs</h1>
+<div class="d-flex align-items-center mb-3">
+    <div class="btn-group" role="group" aria-label="Blog filters">
+        <a href="{% url 'blog_list' %}" class="btn {% if not showing_my_blogs %}btn-primary{% else %}btn-outline-primary{% endif %}">All Blogs</a>
+        {% if user.is_authenticated %}
+        <a href="{% url 'my_blogs' %}" class="btn {% if showing_my_blogs %}btn-primary{% else %}btn-outline-primary{% endif %}">My Blogs</a>
+        {% endif %}
+    </div>
+  </div>
 <div class="container">
-    <div class="masonry">
-    <!-- <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4"> -->
+    <div class="row g-4">
     {% for blog in blogs %}
-    <!-- <div class="col-md-6 col-lg-4"> -->
-        <div class="card shadow-sm">
-            {% if blog.image %}
-            <img src="{{ blog.image.url }}" class="card-img-top" alt="{{ blog.title }}">
-            {% endif %}
-            <div class="card-body">
-                <h5 class="card-title">{{ blog.title }}</h5>
-                <p class="card-text text-muted">
-                    By {{ blog.author.username }} | {{ blog.created_at|date:"d M Y" }}
-                </p>
-                <p>{{ blog.content|truncatechars:100 }}</p>
-                <a href="{% url 'blog_detail' blog.id %}" class="btn btn-primary">Read More</a>
-                {% if request.user == blog.author %}
-                <a href="{% url 'blog_edit' blog.id %}" class="btn btn-warning">Edit</a>
-                <a href="{% url 'blog_delete' blog.id %}" class="btn btn-danger">Delete</a>
+        <div class="col-12 col-sm-6 col-lg-4">
+            <div class="card h-100 shadow-sm">
+                {% if blog.image %}
+                <img src="{{ blog.image.url }}" class="card-img-top" alt="{{ blog.title }}" style="height: 180px; object-fit: cover;">
                 {% endif %}
+                <div class="card-body d-flex flex-column">
+                    <div>
+                        <h5 class="card-title">{{ blog.title }}</h5>
+                        <p class="card-text text-muted mb-2">
+                            By {{ blog.author.username }} | {{ blog.created_at|date:"d M Y" }}
+                            {% if showing_my_blogs %}
+                            <span class="badge {% if blog.status == 'published' %}bg-success{% else %}bg-warning{% endif %} ms-2">
+                                {{ blog.get_status_display }}
+                            </span>
+                            {% endif %}
+                        </p>
+                        <p class="mb-3">{{ blog.content|truncatechars:120 }}</p>
+                    </div>
+                    <div class="mt-auto d-flex flex-wrap gap-2">
+                        <a href="{% url 'blog_detail' blog.id %}" class="btn btn-primary">Read More</a>
+                        {% if request.user == blog.author %}
+                        <a href="{% url 'blog_edit' blog.id %}" class="btn btn-warning">Edit</a>
+                        <form method="POST" action="{% url 'blog_delete' blog.id %}" class="d-inline" onsubmit="return confirm('Delete this blog?');">
+                            {% csrf_token %}
+                            <input type="hidden" name="next" value="{% if showing_my_blogs %}{% url 'my_blogs' %}{% else %}{% url 'blog_list' %}{% endif %}">
+                            <button type="submit" class="btn btn-danger">Delete</button>
+                        </form>
+                        {% if showing_my_blogs and blog.status == 'draft' %}
+                        <a href="{% url 'publish_blog' blog.id %}?next={% url 'my_blogs' %}" class="btn btn-success">Publish</a>
+                        {% endif %}
+                        {% endif %}
+                    </div>
+                </div>
             </div>
         </div>
-  
     {% empty %}
-    <p>No blogs yet!</p>
+        <div class="col-12"><p>No blogs yet!</p></div>
     {% endfor %}
+    </div>
 </div>
-</div>
-
-<style>
-.masonry {
-    column-count: 3; /* number of columns */
-    column-gap: 1rem; /* spacing between columns */
-}
-
-.masonry .card {
-    display: inline-block;
-    width: 100%;
-    margin-bottom: 1rem; /* spacing between cards vertically */
-}
-@media (max-width: 992px) {
-    .masonry {
-        column-count: 2;
-    }
-}
-@media (max-width: 576px) {
-    .masonry {
-        column-count: 1;
-    }
-}
-</style>
 {% endblock %}
