--- a/authentication/templates/authentication/signup.html
+++ b/authentication/templates/authentication/signup.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="{% static 'authentication/css/style.css' %}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body style="padding-bottom:72px;">
   <div class="auth-container">
     <h2>Sign Up</h2>
 
@@ -88,5 +88,8 @@ toggleConfirmPassword.addEventListener("click", function () {
 });
 </script>
 <script src="{% static 'authentication/js/signup.js' %}"></script>
+  <footer>
+    <p>© {% now "Y" %} My Blog | Built with Django & Bootstrap</p>
+  </footer>
 </body>
 </html>
