--- a/blogapp/templates/blogapp/home.html
+++ b/blogapp/templates/blogapp/home.html
@@ -14,9 +14,7 @@
     {% for blog in blogs %}
         <div class="col-12 col-sm-6 col-lg-4">
             <div class="card h-100 shadow-sm">
-                {% if blog.image %}
-                <img src="{{ blog.image.url }}" class="card-img-top" alt="{{ blog.title }}" style="height: 180px; object-fit: cover;">
-                {% endif %}
+                <img src="{{ blog.get_image_url }}" class="card-img-top" alt="{{ blog.title }}" style="height: 180px; object-fit: cover;">
                 <div class="card-body d-flex flex-column">
                     <div>
                         <h5 class="card-title">{{ blog.title }}</h5>
@@ -30,7 +28,8 @@
                         </p>
                         <p class="mb-3">{{ blog.content|truncatechars:120 }}</p>
                     </div>
-                    <div class="mt-auto d-flex flex-wrap gap-2">
+                    <div class="mt-auto d-flex flex-wrap gap-2 align-items-center">
+                        <span class="text-muted me-2">❤️ {{ blog.likes.count }}</span>
                         <a href="{% url 'blog_detail' blog.id %}" class="btn btn-primary">Read More</a>
                         {% if request.user == blog.author %}
                         <a href="{% url 'blog_edit' blog.id %}" class="btn btn-warning">Edit</a>
