--- a/blogapp/templates/blogapp/blog_edit.html
+++ b/blogapp/templates/blogapp/blog_edit.html
@@ -22,7 +22,7 @@
         </small>
     </div>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-        <button type="button" class="btn btn-secondary me-md-2" onclick="(function(){ if (document.referrer) { history.back(); } else { window.location.href='{% url 'home' %}'; } })()">Cancel</button>
+        <a href="{% url 'blog_detail' blog.id %}" class="btn btn-secondary me-md-2">Cancel</a>
         <button type="submit" name="action" value="save_draft" class="btn btn-warning me-md-2">
             <i class="bi bi-save"></i> Save as Draft
         </button>
